--- a/style/style.css
+++ b/style/style.css
@@ -98,6 +98,10 @@ main h2 {
     text-indent: 8px;
 }
 
+main img {
+    width: 100%;
+}
+
 main p {
     margin: 15px 0px 15px 0px;
     text-align: justify;
